--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -12,9 +12,11 @@ spring:
       ddl-auto: update
   flyway:
     enabled: true
-    locations: filesystem:db/migration
+    locations: classpath:db/migration
     baseline-on-migrate: true
-  logging:
+    validate-on-migrate: true
+    clean-disabled: false
+  logging: 
     level:
       org:
         springframework:
