--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,23 +1,32 @@
 spring:
   application:
     name: parkingmanager
+
   datasource:
     url: jdbc:postgresql://localhost:5432/parkingmanager
     username: docker
     password: docker
     driver-class-name: org.postgresql.Driver
+
   jpa:
     show-sql: true
     hibernate:
       ddl-auto: update
+
   flyway:
     enabled: true
     locations: classpath:db/migration
     baseline-on-migrate: true
     validate-on-migrate: true
     clean-disabled: false
+
   logging: 
     level:
       org:
         springframework:
           autoconfigure: warn
+
+api:
+  security:
+    token:
+      secret: ${JWT_SECRET:my-secret-key}
