--- a/pom.xml
+++ b/pom.xml
@@ -29,7 +29,7 @@
     <dependencies>
 
         <!-- OAUTH2 AUTORIZATION SERVER DEPENDENCY -->
-        <!-- <dependency>
+        <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-oauth2-authorization-server</artifactId>
             <version>3.5.3</version>
@@ -39,7 +39,7 @@
 			<groupId>com.auth0</groupId>
 			<artifactId>java-jwt</artifactId>
 			<version>4.4.0</version>
-		</dependency> -->
+		</dependency>
 
         <!-- SPRING BOOT STARTERS -->
         <dependency>
