--- a/pom.xml
+++ b/pom.xml
@@ -69,6 +69,13 @@
             <version>42.7.7</version>
         </dependency>
 
+        <!-- DATABASE H2 TESTS -->
+        <dependency>
+            <groupId>com.h2database</groupId>
+            <artifactId>h2</artifactId>
+            <scope>test</scope>
+        </dependency>
+
         <!-- FLYWAY -->
         <dependency>
             <groupId>org.flywaydb</groupId>
